# zero2prod

./: .env  .env.example  Cargo.toml  Dockerfile  README.md
config/: base.yaml  configuration.yaml
migrations/: 20250809105621_make_status_not_null_in_subscriptions.sql  20250809105733_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
