[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
config = "0.15.13"
env_logger = "0.11.8"  #not used - replaced by tracing-subscriber/tracing-bunyan-formatter/tracing-log
log = "0.4.27"   #not used - replaced by tracing
once_cell = "1.21.3"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = {version = "1.0.219", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-async-std",
    "macros", #gives access to useful macros
    "postgres", #unlocks postgres specific sql
    "uuid", #support for mapping uuids to the uuid type from the uuid crate
    "chrono", #adds support for mapping SQL timestamptz to the DateTime<T> type from the chrono crate
    "migrate", #gives access to same migrate functionality as we used in the cli
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = {version = "0.1.41", features = ["log"]}
tracing-actix-web = "0.7.19"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = {version = "1.17.0", features = ["v4"]}
validator = "0.20.0"

[dev-dependencies]
claim = "0.5.0"
fake = "4.4.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
wiremock = "0.6.4"
